--- a/devang.html
+++ b/devang.html
@@ -1,2 +1,2 @@
-<html> </html><p>This is "DEVANG BHATTAD"</p>
-<p>He is a student of B.Tech in Computer Science and Engineering.</p> </html
+<html><p>This is "DEVANG BHATTAD"</p>
+<p>He is a student of B.Tech in Computer Science and Engineering.</p> </html>
